Fixes for high-contrast mode
Fixes AB#662, AB#941

--- a/src/@batch-flask/ui/buttons/clickable/clickable.scss
+++ b/src/@batch-flask/ui/buttons/clickable/clickable.scss
@@ -1,3 +1,9 @@
 bl-clickable {
     cursor: pointer;
 }
+
+@media (forced-colors: active) {
+    bl-clickable {
+        border: 1px solid currentColor;
+    }
+}
